# ASILPARLA-TREND

./: APPROVAL_SYSTEM_SUMMARY.md  BACKEND_IMPLEMENTATION_RAPORU.md  BIRLESTIRME_RAPORU.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_SETUP_GUIDE.md  GITHUB_UPLOAD_COMPLETE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  PREMIUM_SELLER_DILBER_KALKAN.md  Procfile  QUICK_START_GITHUB.md  README.md  SUCCESS_REPO_CREATED.md  USER_APPROVAL_SYSTEM.md  USER_CREDENTIALS.md  alembic.ini  changelog.txt  db_test.py  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.js  full_tree.txt  jsconfig.json  main.py  package-lock.json  package.json  project_tree.txt  pyproject.toml  pyrightconfig.json  react-native.config.js  requirements.txt  structure_tree.txt  temp_inventory.ps1
alembic/: env.py
alembic/versions/: 001_add_user_premium_fields.py
apk_analysis/: AndroidManifest.xml  classes2.dex  kotlin-tooling-metadata.json  resources.arsc
apk_analysis/res/: 2f.xml  2j.xml  3A.xml  7G.xml  9V.xml  A1.xml  Be.xml  F8.xml  FT.xml  Fu.xml  OI.xml  S8.xml  V1.xml  VT.xml  Z-.xml  a0.xml  cV.xml  dO.xml  eA.xml  hP.xml  hP1.xml  iQ.xml  k8.xml  kn.xml  lR.xml  lz.xml  nP.xml  oP.xml  uJ.xml  vG.xml  vq.xml  xN.xml  zT.xml
apps/admin/: admin.html  ai_panel.html  ai_panel.js  approvals.html  approvals.js  billing.html  dashboard.css  dashboard.html  dashboard.js  health.html  login.css  login.html  login.js  logs.html
apps/mobile/: App.js  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json
apps/seller/: dashboard.html  dashboard.js  login.css  login.html  login.js
apps/shared/: style.css
automation/: n8n_client.py
automation/n8n/: README.md  __init__.py  integrations.py  triggers.yaml  workflow_generate_daily_finance_report.json  workflow_send_account_health_alerts.json  (+3 more)
config/: api_manifest.yaml  app.yaml  database.yaml
docs/: architecture.md  ha_failover.md  observability.md
monitoring/: alerts_rules.yaml  health_check.py  metrics_collector.py
tests/: conftest.py
(+82 files in other folders)
