[project]
name = "asilParla"
version = "1.17.02"
description = "AI-Powered Trendyol Seller Automation System"
authors = [
  { name = "Muhammed Kulay", email = "muhammedkulay@gmail.com" },
  { name = "Dilber Kalkan", email = "asilparla73@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.1",
  "pydantic>=2.9.1",
  "pydantic-settings>=2.5.2",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg2-binary>=2.9.9",
  "python-multipart>=0.0.9",
  "requests>=2.32.3",
  "aiohttp>=3.10.5",
  "celery>=5.4.0",
  "redis>=5.0.7",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "jinja2>=3.1.4",
  "cryptography>=43.0.1",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.9.0",
  "pandas>=2.2.3",
  "numpy>=1.26.4",
  "xlsxwriter>=3.2.0",
  "reportlab>=4.2.2",
  "lxml>=5.2.2",
  "beautifulsoup4>=4.12.3",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "watchdog>=4.0.2",
  "tqdm>=4.66.5",
  "colorama>=0.4.6",
  "loguru>=0.7.2",
  "pyyaml>=6.0.1",
  "email-validator>=2.2.0",
  "prometheus-client>=0.21.0",
  "gunicorn>=23.0.0",
  "websockets>=14.1",
  "tenacity>=9.0.0",
  "sentry-sdk>=2.17.0",
  "orjson>=3.10.7",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.2.0",
  "slowapi>=0.1.9",
  "starlette>=0.37.2"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.pyright]
include = [
    "services",
    "automation",
    "monitoring",
    "compliance",
    "tools",
    "tests",
    "system_enhancements",
    "main.py"
]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build"
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedImport = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
